  screen was the last one that had already been buffered.
* more: Do not rely on the state of continued calls to mbrtowc() but reset
  its state each time and call it with the complete sequence again to work
  around problems with glibc in EUC-JP locales (Patch by Matthew Fischer).
* pg: Fixed the handling of backspaces following multicolumn characters.

Release 050106
* grep: A '-z' option is now available; it decompresses compressed files and
  looks for the pattern in the plain text.
* file: Recognizes UTF-8 encoded text now.
* basename, csplit, ed, grep, nl, pg, sed: The multibyte locale code of the
  traditional regular expression matching functions lead to segmentation
  faults and missing matches with some input sequences because of an
  uninitialized variable.
* rm: The traditional and POSIX versions have been fixed with regard to the
  '-f' and '-i' options; if both were given, the traditional version behaved
  as documented for the POSIX one and vice-versa.
* pg: Compute the width of non-printable characters that correspond to a
  multibyte sequence correctly. In UTF-8 locales, non-printable characters
  are now substituted by Unicode control pictures or the Unicode replacement
  character.
* pg: Always print the '(EOF):' prompt on a new line, even if the input file
  does not end with a newline character.
* ps: If a user or group name is printed with property for the -o option and
  the name does not fit into the column width, the numeric id is now written
  instead.
* rm: For the traditional command versions, 'rm -- -' now tries to remove a
  file named '-'.
* grep (traditional), nawk: Handle character case conversions correctly if
  the length of the converted multibyte sequence is smaller than the original
  one.
* od: Accept '-j 0' and do not skip anything then; if both '-j' and '-N' are
  given, format the given number of bytes as specified by POSIX and do not
  substract the skip count from it (Bugreport by Andreas Hofmeister).