@@ -30,9 +30,9 @@
 #define	USED
 #endif
 #ifdef	SUS
-static const char sccsid[] USED = "@(#)pg_sus.sl	2.58 (gritter) 1/22/05";
+static const char sccsid[] USED = "@(#)pg_sus.sl	2.59 (gritter) 1/22/05";
 #else
-static const char sccsid[] USED = "@(#)pg.sl	2.58 (gritter) 1/22/05";
+static const char sccsid[] USED = "@(#)pg.sl	2.59 (gritter) 1/22/05";
 #endif
 
 #ifndef	USE_TERMCAP
@@ -453,7 +453,7 @@ ring(void)
 /*
  * Terminfo strings to pass through.
  */
-static const char	*ti_sequences[40];
+static const char	*ti_sequences[42];
 static int		esc1;
 
 #define	seqstart(c)	(esc1 ? (c) == esc1 : iscntrl(c))
@@ -501,6 +501,7 @@ fill_sequences(void)
 	ix += one_sequence("rmul", ix);
 	ix += one_sequence("sc", ix);	/* generated by tbl|nroff on Solaris */
 	ix += one_sequence("rc", ix);	/* generated by tbl|nroff on Solaris */
+	ix += one_sequence("rmacs", ix);
 #else	/* USE_TERMCAP */
 	if (tinfostat <= 0 || (sgr0 = tgetstr("me", &termptr)) == NULL)
 		return;
@@ -514,6 +515,7 @@ fill_sequences(void)
 	ix += one_sequence("se", ix);
 	ix += one_sequence("sc", ix);	/* generated by tbl|nroff on Solaris */
 	ix += one_sequence("rc", ix);	/* generated by tbl|nroff on Solaris */
+	ix += one_sequence("ae", ix);
 	Clear_screen = tgetstr("cl", &termptr);
 #endif	/* USE_TERMCAP */
 #if defined (COLOR_BLACK) && !defined (USE_TERMCAP)
